# ml_course_ru

./: pyproject.toml
assignments/: Lab01.ipynb  Lab2.py  lab02.ipynb  out.csv  out_parsed.csv
assignments/.ipynb_checkpoints/: Lab01-checkpoint.ipynb
assignments/Lab3/: Concrete_Data.xls  exp.py  liner.py  regul.py
assignments/Lab4/: Lab4.ipynb  additional_info_dataset.txt
assignments/Lab5/: Lab5.ipynb
lecture02. Basics of python/: Lecture 02. pandas_data_analysis.ipynb  intro.ipynb
lecture03. Linear regression/: lecture03.ipynb
lecture03. Linear regression/examples/: lecture_notes.ipynb  plot_all_scaling.ipynb
