[tool.poetry]
name = "ml-course-ru"
version = "0.1.0"
description = ""
authors = ["N777 <Egorov_vadim2001@mail.ru>"]
readme = "README.md"
packages = [{include = "ml_course_ru"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"
pandas = "^1.5.2"
matplotlib = "^3.6.2"
ipython = "^8.7.0"
jupyter = "^1.0.0"
scikit-learn = "^1.1.3"
seaborn = "^0.12.1"
data = "^0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
